# brainrot-video-pipeline

./: .env.example  .gitignore  README.md  design.md  pyproject.toml  requirements.txt
code/: main.py  text_to_speech_poc.py
config/: config.yaml  prompt_config.yaml
outputs/: state_uptoFactChecker.json
outputs/Apache_Spark_for_data_engineering/: json_state.json  repr_state.txt
